Corrected the fix for not showing the django-fiber sidebar

--- a/learnscripture/static/css/learnscripture.less
+++ b/learnscripture/static/css/learnscripture.less
@@ -1162,3 +1162,7 @@ p.referral-link {
 body div#wpr-body {
   position: static !important;
 }
+
+body.df-sidebar div#wpr-body {
+  margin-right: 0px !important;
+}
